# scrappers

./: .gitignore  README.md  config.yml  docker-compose.yml  example_env  pyproject.toml
api_gateway/: Dockerfile  contracts.py  main.py  requirements.txt
channel-scrapper/: channel_scrappers.py  main.py  msg_scrappers.py  utils.py
channel_scrapper/: channel_scrappers.py  main.py  msg_scrappers.py  utils.py
configs/: config.yml
db_handler/: connection.py  database.py
scraper/: Dockerfile  docker-compose.yml  requirements.txt
scraper/api/: contracts.py  main.py
scraper/database/: connection.py  database.py  session.py
scraper/docker/api/: Dockerfile
scraper/docker/scraper/: Dockerfile
scraper/scraper/: channel_scraper.py  consumer.py  flood_error_caretaker.py  main.py  message_scraper.py  scrapers.py
scraper_initialization/: init_script.py
scripts/: get_raw_text_of_pinned_posts.ipynb  get_session_string.py  send_parsed_channel.ipynb
task_producer/: task_producer.py
