[tool.poetry]
name = "scrappers"
version = "0.1.0"
description = ""
authors = ["deniskirbaba <kirbabadenis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Telethon = "^1.37.0"
pandas = "^2.2.3"
PyYAML = "^6.0.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
