[tool.poetry]
name = "scrappers"
version = "0.1.0"
description = ""
authors = ["deniskirbaba <kirbabadenis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Telethon = "^1.37.0"
pandas = "^2.2.3"
PyYAML = "^6.0.2"
tqdm = "^4.66.5"
sqlalchemy = "^2.0.36"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
