[tool.poetry]
name = "scraper-v2"
version = "0.1.0"
description = ""
authors = ["deniskirbaba <kirbabadenis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pika = "^1.3.2"
uvicorn = "^0.32.0"
telethon = "^1.37.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
aio-pika = "^9.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
